2012-09-06  James Robinson  <jamesr@chromium.org>

        [chromium] Use WebCompositorSupport functions instead of WebCompositor statics
        https://bugs.webkit.org/show_bug.cgi?id=96007

        Reviewed by Adrienne Walker.

        Updates comment to reference WebCompositorSupport instead of WebCompositor.

        * chromium/public/WebLayerTreeView.h:
        (WebLayerTreeView):

2012-09-06  Jeff Timanus  <twiz@chromium.org>

        [Chromium] Remove contentsScale and related logic from GraphicsLayerChromium.
        https://bugs.webkit.org/show_bug.cgi?id=95094

        Reviewed by Adrienne Walker.

        In the short term, the page-scale logic is to be unified in the CCLayerTreeHost class.  This is a first pass to
        try to remove the page-scale logic from GraphicsLayerChromium.  This change should be a no-op in terms of
        contentsScale behaviour.

        * chromium/public/WebContentLayer.h:
        (WebContentLayer):
            Export setBoundsContainPageScale() family of routines.

2012-09-06  Tommy Widenflycht  <tommyw@google.com>

        MediaStream API: Add the local and remote description functionality to RTCPeerConnection
        https://bugs.webkit.org/show_bug.cgi?id=95839

        Reviewed by Adam Barth.

        * Platform.gypi:
        * chromium/public/WebRTCPeerConnectionHandler.h:
        (WebKit):
        (WebRTCPeerConnectionHandler):
        * chromium/public/WebRTCVoidRequest.h: Copied from Source/Platform/chromium/public/WebRTCPeerConnectionHandler.h.
        (WebCore):
        (WebKit):
        (WebRTCVoidRequest):
        (ExtraData):
        (WebKit::WebRTCVoidRequest::ExtraData::~ExtraData):
        (WebKit::WebRTCVoidRequest::WebRTCVoidRequest):
        (WebKit::WebRTCVoidRequest::~WebRTCVoidRequest):
        (WebKit::WebRTCVoidRequest::operator=):
        (WebKit::WebRTCVoidRequest::isNull):

2012-09-05  Kenichi Ishibashi  <bashi@chromium.org>

        Unreviewed, rolling out r127612, r127660, and r127664.