@@ -1,5 +1,15 @@
 2012-09-06  James Robinson  <jamesr@chromium.org>
 
+        [chromium] Export public functions on WebTransformationMatrix so they can be used outside of WebKit.dll
+        https://bugs.webkit.org/show_bug.cgi?id=96025
+
+        Reviewed by Adrienne Walker.
+
+        * chromium/public/WebTransformationMatrix.h:
+        (WebTransformationMatrix):
+
+2012-09-06  James Robinson  <jamesr@chromium.org>
+
         [chromium] Use WebCompositorSupport functions instead of WebCompositor statics
         https://bugs.webkit.org/show_bug.cgi?id=96007
 
